@@ -1,0 +1,6 @@
+﻿server = new RemotingHostServer(Machine, 10002, "RemoteHost4");
+remote = new RemotingHostClient("localhost", 10002, "RemoteHost4");
+
+remote.Include("AgentCall.ajs"); // it set result == 2
+
+server.Stop();
